--- a/week3.html
+++ b/week3.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <title>Week 3</title>
+        <title>
+            week3
+        </title>
         <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous"
-      />
-      <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-      />
-      <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" 
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+        crossorigin="anonymous">
+    </script>
         <script>
             let count = 0;
-
+            function shownum(){
+                    console.log(count);
+                    count++;
+            }
             $(document).ready(function(){
-                function increaseCounter(){
-                    $("#counter").text("AAA");
-                }
-                function decreaseCounter(){
-                    $("#counter").text("BBB");
-                }
+                console.log("ready");
             });
+            function increase(){
+                $("#counter").text(parseInt($("#counter").text())+1);
+            }
+            function decrease(){
+                $("#counter").text(parseInt($("#counter").text())-1);
+            }
+            alert("This is in script");
+            
         </script>
+        <body>
+            <button onclick = "alert(count)"class = "btn btn-primary">Click meeeeee!!!</button>
+            <button onclick = "console.log('hi')"class = "btn btn-primary">Say Hi!</button>
+            <h1 onclick = "shownum()">click me!</h1>
+        <div class="d-flex flex-column justify content-center allign-items-center mt-4">
+            <h2 id="counter">0</h2>
+            <div>
+            <button onclick = "increase()"class = "btn btn-primary">+1</button>
+            <button onclick = "decrease()"class = "btn btn-primary">-1</button>
+        </div>
+        </div>
+        </body>
     </head>
-    <body>
-        <button onclick="alert('Hi')">This is my button</button>
-        <button onclick="alert(count)">What is count value??</button>
-        <button></button>
-    </body>
 </html>
