--- a/week3.html
+++ b/week3.html
@@ -41,9 +41,9 @@
         </script>
         <body>
             <button onclick = "alert(count)"class = "btn btn-primary">Click meeeeee!!!</button>
-            <button onclick = "console.log('hi')"class = "btn btn-primary">Say Hi!</button>
+            <button onclick = "alert('hi')">Say Hi!</button>
             <h1 onclick = "shownum()">click me!</h1>
-        <div class="d-flex flex-column justify content-center allign-items-center mt-4">
+        <div class="d-flex flex-column justify-content-center align-items-center mt-4">
             <h2 id="counter">0</h2>
             <div>
             <button onclick = "increase()"class = "btn btn-primary">+1</button>
